2011-06-03  6.7.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-3.

2011-06-02  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * Use memmove() instead of memcpy() in StripString().

2011-05-27  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-2.

2011-05-26  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * ImageMagick now compiles on Hurd (reference
    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=628020).
  * Use vfprintf rather than fprintf in FormatLocaleFileList().

2011-05-26  6.7.0-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-1.

2011-05-25  6.7.0-1 Cristy  <quetzlzacatenango@image...>
  * Not all Linux'es define locale_t (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18819).

2011-05-22  6.7.0-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-0.

2011-05-21  6.7.0-0 Cristy  <quetzlzacatenango@image...>
  * Avoid fault on corrupt JPEG images.
  * Avoid fault on certain DJVU images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18807).
  * Fix -fx to interpret scientfic notation properly.

2011-05-20  6.6.9-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.6.9-10.

2011-05-20  6.6.9-10 Glenn Randers-Pehrson <glennrp@image...>
  * The PNG encoder now respects the -depth setting, including 1, 2, 4.
    Previously settings other than 8 and 16 were ignored (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18412). 

2011-05-16  6.6.9-10 Cristy  <quetzlzacatenango@image...>
  * Don't use comma as a separator for stroked text (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18742).
  * Use C locale when generating or interpretting SVG.
  * Fix "unterminated macro" for Q32 build of coders/png.c.

2011-05-15  6.6.9-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.6.9-9.

2011-05-14  6.6.9-9 Cristy  <quetzlzacatenango@image...>